<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/detailed_search_fragment">

    <data>
        <variable
                name="viewModel"
                type="si.f5.e_yama.connpassclient.ui.main.MainViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/detailed_search_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/app_name"
                android:background="@color/purple_500"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:titleTextColor="#FFFFFF"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailed_search_toolbar">
            <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/detail_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="5dp" android:layout_marginEnd="5dp"
                    tools:ignore="UselessLeaf">
                <TextView
                        android:text="@string/detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/detail_message_title"
                        android:textColor="#FF03DAC5"
                        android:layout_marginTop="10dp"/>
                <TextView
                        android:text="@string/temp"
                        android:layout_width="match_parent" android:textSize="22sp"
                        android:layout_height="wrap_content" android:id="@+id/detail_title"
                        android:textColor="#FF3700B3"/>
                <TextView
                        android:text="@string/temp"
                        android:layout_width="match_parent" android:textSize="17sp"
                        android:layout_height="wrap_content" android:id="@+id/detail_catch"
                        android:textColor="#88000000"/>

                <TextView
                        android:text="@string/detail_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/detail_message_description"
                        android:textColor="#FF03DAC5" android:layout_marginTop="10dp"/>
                <WebView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/detail_description"/>
                <TextView
                        android:text="@string/detail_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/detail_message_url"
                        android:textColor="#FF03DAC5" android:layout_marginTop="10dp"/>
                <TextView
                        android:text="@string/temp" android:autoLink="web"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/detail_url"
                        android:textColor="#88000000"/>
                <TextView
                        android:text="@string/detail_hashtag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/detail_message_hashtag"
                        android:textColor="#FF03DAC5"
                        android:layout_marginTop="10dp"/>
                <TextView
                        android:text="@string/temp"
                        android:layout_width="match_parent" android:textSize="17sp"
                        android:layout_height="wrap_content" android:id="@+id/detail_hashtag"
                        android:textColor="#88000000"/>
                <TextView
                        android:text="@string/detail_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/detail_message_date"
                        android:textColor="#FF03DAC5"
                        android:layout_marginTop="10dp"/>
                <TextView
                        android:text="@string/temp"
                        android:layout_width="match_parent" android:textSize="17sp"
                        android:layout_height="wrap_content" android:id="@+id/detail_date"
                        android:textColor="#88000000"/>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>