<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_fragment"
        tools:context=".ui.main.MainFragment">
    <data>
        <variable
                name="viewModel"
                type="si.f5.e_yama.connpassclient.ui.main.MainViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/app_name"
                android:background="@color/purple_500"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:titleTextColor="#FFFFFF"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:id="@+id/search_bar"
                android:minHeight="48dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="60dp"
                android:layout_marginStart="16dp"
                android:hint="@string/search_hint" android:text="@={viewModel.keyword}"
                android:layout_marginEnd="64dp" app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="@string/search_icon"
                android:layout_width="50dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content" android:id="@+id/search_button"
                android:layout_marginTop="60dp" android:layout_marginEnd="4dp" app:backgroundTint="#B8B8B8"/>
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="120dp">
            <ListView
                    android:id="@+id/search_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@null"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>